# GamepadMidiController

./: CC_MAP.md  HIDAPI_MIGRATION_PLAN.md  README.md  SDL3_MIGRATION_PLAN.md
GamepadMidiController/: CMakeLists.txt  GamepadMidiController.cpp  GamepadMidiController.h  mappings.h  steam_controller.cpp  steam_controller.h
